restructure in packages